# DirectX-Demo

./: CMakeLists.txt  imgui.ini
core/: CMakeLists.txt
core/include/: dxd.h
core/include/dxd/: application.h  buffer.h  camera_component.h  collider_component.h  collision_manager.h  component.h  game_object.h  imgui_manager.h  keyboard.h  log.h  mesh.h  mesh_loader.h  mesh_renderer_component.h  mouse.h  object.h  renderer.h  rigidbody_component.h  shader.h  transform_component.h  vertex.h  window.h
core/src/: camera_component.cpp  collider_component.cpp  collision_manager.cpp  component.cpp  game_object.cpp  keyboard.cpp  mesh.cpp  mesh_loader.cpp  mesh_renderer_component.cpp  mouse.cpp  object.cpp  renderer.cpp  rigidbody_component.cpp  shader.cpp  transform_component.cpp  window.cpp
demos/: CMakeLists.txt
demos/00_experimental_build/: CMakeLists.txt  main.cpp  pixel.hlsl  pixel_depth.hlsl  pixel_normal.hlsl  sphere.h  teapot.h  vertex.hlsl  vertex_depth.hlsl
demos/01_basic_window/: CMakeLists.txt  main.cpp
demos/02_basic_triangle/: CMakeLists.txt  main.cpp  pixel.hlsl  vertex.hlsl
demos/03_multiple_triangles/: CMakeLists.txt  main.cpp  pixel.hlsl  vertex.hlsl
demos/04_mesh_loader/: CMakeLists.txt  main.cpp
demos/05_camera/: CMakeLists.txt  main.cpp
demos/06_gravity_simulation/: CMakeLists.txt  main.cpp
demos/include/: utils.h
resources/: pixel.hlsl  vertex.hlsl
